==> RCSN/cannon_fly/cannon_fly/system/juma/src/NRF24L01.c <==
#include "stm32f4xx_cannon_v2.h"
#include "NRF24L01.h"
extern SPI_HandleTypeDef hnucleo_Spi2;
uint8_t NRF24L01_RXDATA[RX_PLOAD_WIDTH];//nrf24l01接收到的数据
uint8_t NRF24L01_TXDATA[RX_PLOAD_WIDTH];//nrf24l01需要发送的数据


uint8_t TX_ADDRESS[5]={0x00,0x00,0x00,0x00,0xA3};
//修改该接收和发送地址，可以供多个飞行器在同一区域飞行，数据不受干扰
uint8_t  RX_ADDRESS[RX_ADR_WIDTH]= {0x00,0x00,0x00,0x00,0xA1};	//接收地址				


//写寄存器
uint8_t NRF_Write_Reg(uint8_t reg, uint8_t value)
{
    uint8_t status;
    SPI2_CSN_L();		
    HAL_Delay(1);	
    status = HAL_SPI_Transmit(&hnucleo_Spi2,&reg, 1, 100);  
	  HAL_SPI_Transmit(&hnucleo_Spi2,&value, 1, 100);
  //  SPI2_RW(value);		  /* 写数据 */
	HAL_Delay(1);	
    SPI2_CSN_H();					  /* 禁止该器件 */
    return 	status;
}


//读寄存器
uint8_t NRF_Read_Reg(uint8_t reg)
{
    uint8_t reg_val;
    SPI2_CSN_L();		
    HAL_Delay(1);		
    HAL_SPI_Transmit(&hnucleo_Spi2,   &reg, 1, 100); 
    HAL_SPI_Receive(&hnucleo_Spi2,  &reg_val, 1, 100);	  /* 读取该寄存器返回数据 */
    SPI2_CSN_H();	
 
    return 	reg_val;
}


//写缓冲区
uint8_t NRF_Write_Buf(uint8_t reg, uint8_t *pBuf, uint8_t uchars)
{
    uint8_t i;
    uint8_t status;
    SPI2_CSN_L();				        /* 选通器件 */
    status = HAL_SPI_Transmit(&hnucleo_Spi2,&reg, 1, 100);	/* 写寄存器地址 */
//    for(i=0; i<uchars; i++)
//    {
//        SPI2_RW(pBuf[i]);		/* 写数据 */
//    }
	  HAL_SPI_Transmit(&hnucleo_Spi2,pBuf,uchars, 100);
    SPI2_CSN_H();						/* 禁止该器件 */
    return 	status;	
}

//读缓冲区
uint8_t NRF_Read_Buf(uint8_t reg, uint8_t *pBuf, uint8_t uchars)
{
    uint8_t i;
    uint8_t status;
    SPI2_CSN_L();						/* 选通器件 */
	 HAL_Delay(1);
    status = HAL_SPI_Transmit(&hnucleo_Spi2, &reg, 1, 100); /* 写寄存器地址 */
   // for(i=0; i<uchars; i++)
   // {
   //     pBuf[i] = SPI2_RW(0); /* 读取返回数据 */ 	
   // }
	 HAL_SPI_Receive(&hnucleo_Spi2,pBuf,uchars, 100);
    SPI2_CSN_H();				 			/* 禁止该器件 */
    return 	status;
}

//写数据包
void NRF_TxPacket(uint8_t * tx_buf, uint8_t len)
{	
    SPI2_CE_L();		 //StandBy I模式	
    NRF_Write_Buf(WR_TX_PLOAD, tx_buf, len); 			 // 装载数据	
    SPI2_CE_H();		 //置高CE，激发数据发送
}

//初始化
char NRF24L01_INIT(void)
{
	SPI2_Init();
	
	//check if NRF24L01 is in the SPI bus
	NRF24L01_Check();
	
	//set the NRF RX Address,priority to the latest address in eeprom
	//NRF24L01对频接收地址，优先匹配在eeprom中上一次地址
	//NRFmatching();								
}


//接收模式
void SetRX_Mode(void)
{
    SPI2_CE_L();
	  NRF_Write_Reg(FLUSH_RX,0xff);//清除TX FIFO寄存器			 
  	NRF_Write_Buf(NRF_WRITE_REG+RX_ADDR_P0,(uint8_t*)RX_ADDRESS,RX_ADR_WIDTH);//写RX节点地址
   	NRF_Write_Reg(NRF_WRITE_REG+EN_AA,0x01);    //使能通道0的自动应答    
  	NRF_Write_Reg(NRF_WRITE_REG+EN_RXADDR,0x01);//使能通道0的接收地址  	 
  	NRF_Write_Reg(NRF_WRITE_REG+RF_CH,0);	     //设置RF通信频率		  
  	NRF_Write_Reg(NRF_WRITE_REG+RX_PW_P0,RX_PLOAD_WIDTH);//选择通道0的有效数据宽度 	    
  	NRF_Write_Reg(NRF_WRITE_REG+RF_SETUP,0x07);//设置TX发射参数,0db增益,2Mbps,低噪声增益开启   
  	NRF_Write_Reg(NRF_WRITE_REG+CONFIG, 0x0f);//配置基本工作模式的参数;PWR_UP,EN_CRC,16BIT_CRC,接收模式 
    SPI2_CE_H();
    //printf("NRF24L01 Set to Receiving Mode,RX_ADDR 0x%x...\r\n",RX_ADDRESS[4]);
} 


//查询中断
void Nrf_Irq(void)
{
    uint8_t sta = NRF_Read_Reg(NRF_READ_REG + NRFRegSTATUS);
    if(sta & (1<<RX_DR))//接收轮训标志位
    {
        NRF_Read_Buf(RD_RX_PLOAD,NRF24L01_RXDATA,RX_PLOAD_WIDTH);// read receive payload from RX_FIFO buffer
    //    ReceiveDataFormNRF();    //自己做修改
				NRF_Write_Reg(0x27, sta);//清除nrf的中断标志位
			  sta = 0;
    }
    
}


//接收函数
uint8_t NRF24L01_RxPacket(uint8_t *rxbuf)
{
	uint8_t sta;	
SPI2_CE_L();	
        //SPI2_SetSpeed(SPI_SPEED_4); //spi速度为9Mhz（24L01的最大SPI时钟为10Mhz）   
	sta=NRF_Read_Reg(NRFRegSTATUS);  //读取状态寄存器的值    	 
	
	if(sta&RX_OK)//接收到数据
	{
		NRF_Read_Buf(RD_RX_PLOAD,rxbuf,RX_PLOAD_WIDTH);//读取数据
		//NRF_Write_Reg(FLUSH_RX,0xff);//清除RX FIFO寄存器 
		NRF_Write_Reg(NRF_WRITE_REG+NRFRegSTATUS,sta); //清除TX_DS或MAX_RT中断标志
		return 0; 
	}	   
	SPI2_CE_H();
	return 1;//没收到任何数据
}		



//判断SPI接口是否接入NRF芯片是否可用
uint8_t NRF24L01_Check(void) 
{ 
   uint8_t buf[5]={0xC2,0xC2,0xC2,0xC2,0xC2}; 
   uint8_t buf1[5]; 
   uint8_t i=0; 
    
   /*写入5 个字节的地址.  */ 
   NRF_Write_Buf(NRF_WRITE_REG+TX_ADDR,buf,5); 
     
   /*读出写入的地址 */ 
   NRF_Read_Buf(TX_ADDR,buf1,5); 
   
    /*比较*/ 
   for (i=0;i<5;i++) 
   { 
      if (buf1[i]!=0xC2) 
      break; 
   } 
  
   if (i==5)  
   {BSP_LED_On(LED0);
	 return 1 ;}        //MCU 与NRF 成功连接 
   else      
  {BSP_LED_Off(LED0);
	return 0 ;}        //MCU与NRF不正常连接    
}
